--- a/src/main/resources/templates/layout/fragments.html
+++ b/src/main/resources/templates/layout/fragments.html
@@ -81,7 +81,7 @@
                                         <span sec:authentication='name'>Johanna</span>
                                     </a>
                                     <div class="dropdown-menu p-2" aria-labelledby="navbarDropdownProfile">
-                                        <a class="dropdown-item" th:href="@{/profile/perfil}">Perfil</a>
+                                        <a class="dropdown-item" th:href="@{/profile/} + ${#authentication.principal.idUser}">Perfil</a>
                                         <div class="dropdown-divider"></div>
                                         <form method="post" th:action='@{/logout}'>
                                             <button class="dropdown-item btn btn-sm" type="submit">Logout</button>
