--- a/src/main/resources/templates/profile/Profile.html
+++ b/src/main/resources/templates/profile/Profile.html
@@ -17,18 +17,17 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         <main >
             <div class="justify-content-center">
                 <div class="col-md-auto">
-                    <div class=" bg-secondary">
-                        <div class="d-flex align-items-center" style=" background-color: #363636;">
+                    <div class="info-profile">
+                        <div class="d-flex align-items-center">
                             <img  th:src="${#authentication.principal.image} == null ? 'https://urgenciesveterinaries.com/wp-content/uploads/2023/09/survet-gato-caida-pelo-01.jpeg' : ${#authentication.principal.image}" height="200" style="object-fit: cover; aspect-ratio: 1/1; margin: 10px" class="rounded-circle"/>
-                            
-                            <div style="margin-left: 8px" class="text-white" >
-                                <h5 th:text=" 'Nombre: ' + ${#authentication.principal.name}  + ' '+ ${#authentication.principal.firstSurName}  + ' '+ ${#authentication.principal.secondSurName}" class="  mb-0">Nombre Apellidos</h5>
-                                <p th:text=" 'Correo: ' + ${#authentication.principal.username}" class="mb-2 mt-2">Correo</p>
-                                <p class=""  th:text=" 'Telefono: ' + ${#authentication.principal.phone}">Teléfono</p>
-                                <a href="#" class="btn btn-dark">
-                                    <i class="fa-solid fa-gear fa-lg mr-2"></i> Editar Perfil
-                                </a>
-                            </div>
+                        </div>
+                        <div class="info-profile-subdiv" >
+                            <h2 th:text=" 'Nombre: ' + ${#authentication.principal.name}  + ' '+ ${#authentication.principal.firstSurName}  + ' '+ ${#authentication.principal.secondSurName}" class="mb-0">Nombre Apellidos</h2>
+                            <p th:text=" 'Correo: ' + ${#authentication.principal.username}" class="mb-2 mt-2">Correo</p>
+                            <p class=""  th:text=" 'Teléfono: ' + ${#authentication.principal.phone}">Teléfono</p>
+                            <a th:href="@{/profile/edit/} + ${#authentication.principal.idUser}" class="btn btn-dark">
+                                <i class="fa-solid fa-gear"></i>Editar
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -38,48 +37,57 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
 
         </main>
 
-        <section style="margin-left: 20px">
-            <div class="mt-3 ml-3 mb-3"> 
-                <div class="d-flex">
-                    <a href="#" class="btn btn-success px-5 py-2 ml-3 mr-3 mt-3 tex-light">
-                        <i class="fa-solid fa-plus"></i>
-                    </a>
-                    <h2 class="mt-3 ml-3" style="margin-left: 4px">
-                        Agregar Propiedades en venta
-                    </h2>
+        <section>
+            <div class="container-profile-add-property">
+                <div>
+                    <a th:href="@{/properties/new/}" class="btn btn-success px-5 py-2 ml-3 mr-3 mt-3 tex-light"><i class="fa-solid fa-plus"></i>Agregar Propiedad</a>
+
+
                 </div>    
-                <div class="contenedor-favoritos">
-                    <div class="propiedad">
-                        <img src="src" alt="alt"/>
-                        <h3>Titulo</h3>
-                        <p>text</p>
-                        <div>
-                            <a href="#" class="btn btn-dark"> Ver Mas</a>
-                            <a href="#" class="btn btn-danger text-light"><i class="fa-solid fa-trash"></i></a>
-                            <a href="#" class="btn btn-primary text-light"><i class="fa-solid fa-pencil"></i></a>
+                <div class="favorite-container">
+                    <div class="property-favorite" th:each="addedProperty : ${addedProperties}">
+                        <img th:src="${addedProperty.property.imagesLength()} > 0 ? ${addedProperty.property.images[0].image} : 'https://www.shutterstock.com/image-vector/default-ui-image-placeholder-wireframes-600nw-1037719192.jpg'" alt="">
+                        <div class="property-info">
+                            <h3>[[${addedProperty.property.name}]]</h3>
+                            <h4>¢[[${addedProperty.property.price}]]</h4>
+                            <p>Dueño: [[${addedProperty.property.owner}]]</p>
+                            <div class="options-property">
+                                <a   th:href="@{/properties/} + ${addedProperty.property.idProperty}">Más información <i class="fa-solid fa-arrow-right"></i></a>
+                                <a  sec:authorize="hasRole('ROLE_ADMIN')"  th:href="@{/properties/update/} + ${addedProperty.property.idProperty}">Editar <i class="fa-solid fa-pen-to-square"></i></a>
+                                <button sec:authorize="hasRole('ROLE_ADMIN')"  th:attr="onclick='deleteProperty(' + ${addedProperty.property.idProperty} + ')'" >Eliminar <i class="fa-solid fa-trash"></i></button>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
 
+            <div class="text-center p-2" th:if="${addedProperties == null or addedProperties.empty}">
+                <span>Lista Vacia</span>
+            </div>
         </section>
-        <section style="margin-left: 20px">
-            <div class="mt-3 ml-3 mb-3">
-                <h2 class="">
-                    Favoritos
-
-                </h2>
-                <div class="contenedor-favoritos">
-                    <div class="propiedad">
-                        <img src="src" alt="alt"/>
-                        <h3>Titulo</h3>
-                        <p>text</p>
-                        <div>
-                            <a href="#" class="btn btn-dark"> Ver Mas</a>
-                            <a href="#" class="btn btn-danger text-light"><i class="fa-solid fa-trash"></i></a>
+        <section>
+            <hr>
+            <div class="favorite-section">
+                <h2 class="">Favoritos</h2>
+                <div class="favorite-container">
+                    <div class="property-favorite" th:each="favoriteProperty : ${favoriteProperies}">
+                        <img th:src="${favoriteProperty.property.imagesLength()} > 0 ? ${favoriteProperty.property.images[0].image} : 'https://www.shutterstock.com/image-vector/default-ui-image-placeholder-wireframes-600nw-1037719192.jpg'" alt="">
+                        <div class="property-info">
+                            <h3>[[${favoriteProperty.property.name}]]</h3>
+                            <h4>¢[[${favoriteProperty.property.price}]]</h4>
+                            <p>Dueño: [[${favoriteProperty.property.owner}]]</p>
+                            <div class="options-property">
+                                <a th:href="@{/properties/} + ${favoriteProperty.property.idProperty}">Más información <i class="fa-solid fa-arrow-right"></i></a>
+                                <button sec:authorize="hasRole('ROLE_ADMIN')"  th:attr="onclick='deleteFavoriteProperty(' + ${favoriteProperty.idFavoriteProperty} + ')'" >Eliminar <i class="fa-solid fa-trash"></i></button>
+                            </div>
                         </div>
                     </div>
                 </div>
+            </div>
+
+
+            <div class="text-center p-2" th:if="${favoriteProperies == null or favoriteProperies.empty}">
+                <span>Lista Vacia</span>
             </div>
         </section>
 
