Se ordeno el archivo con los scripts de la base de datos

--- a/src/main/resources/static/CSS/styles.css
+++ b/src/main/resources/static/CSS/styles.css
@@ -1,3 +1,13 @@
+.container-error {
+    width: 90%;
+    margin: 30rem auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+
 .properties {
     display: flex;
     align-items: center;
