--- a/src/main/resources/static/CSS/styles.css
+++ b/src/main/resources/static/CSS/styles.css
@@ -48,7 +48,7 @@
 .property-favorite img {
     min-width: 200px;
     width: 80%;
-} 
+}
 
 .property-info {
     display: flex;
@@ -194,7 +194,7 @@
     width: 50%;
     position: relative;
 }
-  
+
 
 .mySlides {
     display: none;
@@ -202,7 +202,7 @@
     max-height: 25vh;
     min-height: 500px;
 }
-  
+
 .mySlides img {
     width: 100%;
     height: 100%;
@@ -221,16 +221,16 @@
     border-radius: 50%;
     user-select: none;
     background: #3347ff;
-  }
+}
 
 .prev i, .next i {
     color: #fff;
 }
-  
+
 .next {
     right: 5%;
-  }
-  
+}
+
 .prev {
     left: 5%;
 }
@@ -243,7 +243,7 @@
 .next:hover {
     transform: translateX(10%);
 }
-  
+
 .dot {
     cursor: pointer;
     height: 15px;
@@ -254,7 +254,7 @@
     display: inline-block;
     transition: background-color 0.6s ease;
 }
-  
+
 .active, .dot:hover {
     background-color: #717171;
 }
@@ -263,10 +263,14 @@
     animation-name: fade;
     animation-duration: 1.5s;
 }
-  
+
 @keyframes fade {
-    from {opacity: .4}
-    to {opacity: 1}
+    from {
+        opacity: .4
+    }
+    to {
+        opacity: 1
+    }
 }
 
 
@@ -350,7 +354,7 @@
     color: #000;
 }
 
-.form-add-property-container form input, .form-add-property-container form select, .form-add-property-container form textarea, 
+.form-add-property-container form input, .form-add-property-container form select, .form-add-property-container form textarea,
 .form-edit-property-container form input, .form-edit-property-container form select, .form-edit-property-container form textarea,
 .form-contact form input, .form-contact form textarea {
     border: none;
