--- a/src/main/resources/templates/aboutUs.html
+++ b/src/main/resources/templates/aboutUs.html
@@ -1,56 +1,73 @@
 <!DOCTYPE html>
-<!--
-Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
-Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this template
--->
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6"
-      xmlns:th="http://www.thymeleaf.org">
+      xmlns:th="http://www.thymeleaf.org/">
     <head th:replace="~{ layout/fragments :: head }">
         <title>Bienes Raices</title>
         <meta charset="UTF-8"/>
-
+        <!-- Agrega el enlace a Bootstrap -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     </head>
     <body>
         <header th:replace="~{ layout/fragments :: header }"/>
 
-        <main>
-            <h1>Sobre Nosotros</h1>
-            <div>
-                <h2>Lorem Ipsum</h2>
-                <p>Proin consequat viverra sapien, malesuada tempor tortor feugiat vitae. In dictum felis et nunc aliquet molestie. Proin tristique commodo felis, sed auctor elit auctor pulvinar. Nunc porta, nibh quis convallis sollicitudin, arcu nisl semper mi, vitae sagittis lorem dolor non risus. Vivamus accumsan maximus est, eu mollis mi. Proin id nisl vel odio semper hendrerit. Nunc porta in justo finibus tempor. Suspendisse lobortis dolor quis elit suscipit molestie. Sed condimentum, erat at tempor finibus, urna nisi fermentum est, a dignissim nisi libero vel est. Donec et imperdiet augue. Curabitur malesuada sodales congue. Suspendisse potenti. Ut sit amet convallis nisi.</p>
-                <p>Aliquam lectus magna, luctus vel gravida nec, iaculis ut augue. Praesent ac enim lorem. Quisque ac dignissim sem, non condimentum orci. Morbi a iaculis neque, ac euismod felis. Fusce augue quam, fermentum sed turpis nec, hendrerit dapibus ante. Cras mattis laoreet nibh, quis tincidunt odio fermentum vel. Nulla facilisi.</p>
+        <main class="container">
+            <div class="row justify-content-center">
+                <div class="col-md-8">
+                    <h1 class="text-center">Sobre Nosotros</h1>
+                    <div>
+                        <h2>Lorem Ipsum</h2>
+                        <p>Proin consequat viverra sapien, malesuada tempor tortor feugiat vitae. In dictum felis et nunc aliquet molestie. Proin tristique commodo felis, sed auctor elit auctor pulvinar. Nunc porta, nibh quis convallis sollicitudin, arcu nisl semper mi, vitae sagittis lorem dolor non risus. Vivamus accumsan maximus est, eu mollis mi. Proin id nisl vel odio semper hendrerit. Nunc porta in justo finibus tempor. Suspendisse lobortis dolor quis elit suscipit molestie. Sed condimentum, erat at tempor finibus, urna nisi fermentum est, a dignissim nisi libero vel est. Donec et imperdiet augue. Curabitur malesuada sodales congue. Suspendisse potenti. Ut sit amet convallis nisi.</p>
+                        <p>Aliquam lectus magna, luctus vel gravida nec, iaculis ut augue. Praesent ac enim lorem. Quisque ac dignissim sem, non condimentum orci. Morbi a iaculis neque, ac euismod felis. Fusce augue quam, fermentum sed turpis nec, hendrerit dapibus ante. Cras mattis laoreet nibh, quis tincidunt odio fermentum vel. Nulla facilisi.</p>
+                    </div>
+                </div>
             </div>
         </main>
-        <section>
-            <h1>Qué puedes esperar de nosotros?</h1>
-            <div>
-                <div>
-                    <img src="" alt="imagen-icono"/>
-                    <h3>Competitividad</h3>
-                    <p>
-                        Ofrecemos una amplia selección de propiedades a
-                        precios competitivos que se ajustan a diversos presupuestos.
-                    </p>
-                </div>
-                <div>
-                    <img src="" alt="imagen-icono"/>
-                    <h3>Calidad Garantizada</h3>
-                    <p>
-                        Garantizamos la calidad de nuestras propiedades, trabajando con vendedores confiables
-                        para ofrecerle lo mejor.
-                    </p>
-                </div>
-                <div>
-                    <img src="" alt="imagen-icono">
-                    <h3>Asesoramiento Profesional</h3>
-                    <p>
-                        Nuestro equipo de agentes inmobiliarios altamente capacitados está listo
-                        para brindarte asesoramiento experto en cada paso del proceso de compra de tu propiedad.
-                    </p>
+
+        <section class="container">
+            <div class="row justify-content-center">
+                <div class="col-md-8">
+                    <h1 class="text-center mb-3">Qué puedes esperar de nosotros?</h1>
+                    <div class="row mt-6">
+                        <div class="col-md-4">
+                            <div class="text-center">
+                                <div class="icon-circle" style="background-color: #ffa500; display: inline-block; padding: 2rem; border-radius: 50%;">
+                                    <i class="fa-solid fa-house-circle-check" style="color: #fff; font-size: 5rem;"></i>
+                                </div>
+                            </div>
+                            <h3 class="text-center mt-2">Competitivo</h3>
+                            <p class="text-center">
+                                Ofrecemos una amplia selección de propiedades a precios competitivos que se ajustan a diversos presupuestos.
+                            </p>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="text-center">
+                                <div class="icon-circle" style="background-color: #ffa500; display: inline-block; padding: 2rem; border-radius: 50%;">
+                                    <i class="fa-solid fa-ranking-star" style="color: #fff; font-size: 5rem;"></i>
+                                </div>
+                            </div>
+                            <h3 class="text-center mt-2">Calidad Garantizada</h3>
+                            <p class="text-center">
+                                Garantizamos la calidad de nuestras propiedades, trabajando con vendedores confiables para ofrecerle lo mejor.
+                            </p>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="text-center">
+                                <div class="icon-circle" style="background-color: #ffa500; display: inline-block; padding: 2rem; border-radius: 50%;">
+                                    <i class="fa-solid fa-headset" style="color: #fff; font-size: 5rem;"></i>
+                                </div>
+                            </div>
+                            <h3 class="text-center mt-2">Asesoramiento Profesional</h3>
+                            <p class="text-center">
+                                Nuestro equipo de agentes inmobiliarios altamente capacitados está listo para brindarte asesoramiento experto en cada paso del proceso de compra de tu propiedad.
+                            </p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
+
         <footer th:replace="~{ layout/fragments :: footer }"/>
+
     </body>
 </html>
