--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,52 +1,70 @@
+
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6"
       xmlns:th="http://www.thymeleaf.org">
-    <head th:replace="~{layout/fragments :: head }"></head>
+    <head th:replace="~{layout/fragments :: head }">Bienes Raíces</head>
+
     <body>
-    <header th:replace="~{ layout/fragments :: header }"/>
+        <header th:replace="~{ layout/fragments :: header }"/>
 
-    <main>
-        <h1>Bienvenido</h1>
-        <div>
-            <div>
-                <img src="" alt="imagen-icono"/>
-                <h3>Competitivo</h3>
-                <p>
-                    Ofrecemos una amplia selección de propiedades a
-                    precios competitivos que se ajustan a diversos presupuestos.
-                </p>
-            </div>
-            <div>
-                <img src="" alt="imagen-icono"/>
-                <h3>Calidad Garantizada</h3>
-                <p>
-                    Garantizamos la calidad de nuestras propiedades, trabajando con vendedores confiables
-                    para ofrecerle lo mejor.
-                </p>
-            </div>
-            <div>
-                <img src="" alt="imagen-icono">
-                <h3>Asesoramiento Profesional</h3>
-                <p>
-                    Nuestro equipo de agentes inmobiliarios altamente capacitados está listo
-                    para brindarte asesoramiento experto en cada paso del proceso de compra de tu propiedad.
-                </p>
-            </div>
-        </div>
-    </main>
-    <section>
-        <h2>Propiedades en venta</h2>
+        <main class="container">
+            <h1 class="text-center mt-4">Bienvenido a Bienes Raíces</h1>
+            <h2 class="mt-4 text-center">Que te ofrecemos?</h2>
 
-        <div>
-            <a href="#">Ver Mas</a>
-        </div>
-    </section>
-    <section>
-        <h2>Buscar tu mejor opción?</h2>
-        <p>Contactanos por medio del formulario de contacto para que un asesor se ponga en contacto contigo</p>
-        <a href="url">Contactanos</a>
-    </section>
-    <footer th:replace="~{ layout/fragments :: footer }"/>
-</body>
+            <div class="row mt-4">
+                <div class="col-md-4">
+                    <div class="text-center">
+                        <div class="icon-circle" style="background-color: #ffa500; display: inline-block; padding: 2rem; border-radius: 50%;">
+                            <i class="fa-solid fa-house-circle-check" style="color: #fff; font-size: 5rem;"></i>
+                        </div>
+                    </div>
+                    <h3 class="text-center mt-2">Competitivo</h3>
+                    <p class="text-center">
+                        Ofrecemos una amplia selección de propiedades a precios competitivos que se ajustan a diversos presupuestos.
+                    </p>
+                </div>
+                <div class="col-md-4">
+                    <div class="text-center">
+                        <div class="icon-circle" style="background-color: #ffa500; display: inline-block; padding: 2rem; border-radius: 50%;">
+                            <i class="fa-solid fa-ranking-star" style="color: #fff; font-size: 5rem;"></i>
+                        </div>
+                    </div>
+                    <h3 class="text-center mt-2">Calidad Garantizada</h3>
+                    <p class="text-center">
+                        Garantizamos la calidad de nuestras propiedades, trabajando con vendedores confiables para ofrecerle lo mejor.
+                    </p>
+                </div>
+                <div class="col-md-4">
+                    <div class="text-center">
+                        <div class="icon-circle" style="background-color: #ffa500; display: inline-block; padding: 2rem; border-radius: 50%;">
+                            <i class="fa-solid fa-headset" style="color: #fff; font-size: 5rem;"></i>
+                        </div>
+                    </div>
+                    <h3 class="text-center mt-2">Asesoramiento Profesional</h3>
+                    <p class="text-center">
+                        Nuestro equipo de agentes inmobiliarios altamente capacitados está listo para brindarte asesoramiento experto en cada paso del proceso de compra de tu propiedad.
+                    </p>
+                </div>
+            </div>
+        </main>
+
+        <section class="text-center d-flex flex-column align-items-center justify-content-center">
+            <h2>Propiedades en venta</h2>
+            <h5 class="mt-2">Con nuestro amplio catalogo de propeidades puedes encontrar la casa de tus sueños</h5>
+            <div class="d-flex flex-column align-items-center mt-5">
+                <img src="https://abogadosdefamilialosangeles.com/images/servicios/propiedad-comunitaria-definida.jpg" class="mb-3" style="border-radius: 1rem;" alt="alt" />
+                <a href="/properties/list" class="btn btn-primary" style="border-radius: 0.5rem;">Ver Propiedades</a>
+            </div>
+        </section>
+
+        <section class="text-center mt-5 mb-5">
+            <h2>Buscas tu mejor opción?</h2>
+             <img src="https://i.pinimg.com/736x/96/af/8d/96af8d60f3ef5b40a357169293974faf.jpg" class="mb-3" style="border-radius: 1rem; max-width: 300px;" alt="alt" />
+            <h5>Contactanos por medio del formulario de contacto para que un asesor se ponga en contacto contigo</h5>
+             <a href="#" class="btn btn-primary mt-4" style="border-radius: 0.5rem;">Contactanos</a>
+        </section>
+
+        <footer th:replace="~{ layout/fragments :: footer }"/>
+    </body>
 </html>
